--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <title>Проекты — расчёт дат, сумм и график</title>
-  <script src="https://www.gstatic.com/charts/loader.js"></script>
+  <title>Ввод данных по проектам</title>
   <style>
-    body { font-family: Arial, sans-serif; }
+    body { font-family: Arial, sans-serif; margin: 16px; }
     table { border-collapse: collapse; margin-bottom: 12px; width: 100%; max-width: 1200px; }
     table, th, td { border: 1px solid #008000; }
     th, td { padding: 6px; }
     input { width: 140px; }
     .actions { margin-bottom: 12px; }
     .actions button { margin-right: 6px; padding: 6px 10px; cursor: pointer; }
-    #chart_div { width: 100%; height: 640px; }
   </style>
 </head>
 <body>
-    <table id="projectsTable">
+  <h2>Ввод данных по проектам</h2>
+
+  <table id="projectsTable">
     <tr>
       <th>Название проекта</th>
       <th>Дата начала проекта</th>
@@ -39,49 +39,31 @@
 
   <div class="actions">
     <button id="btnAdd">Добавить проект</button>
-    <button id="btnCalc">Рассчитать и построить график</button>
+    <button id="btnGoChart">Построить график</button>
     <button id="btnClear">Очистить данные</button>
   </div>
 
-  <div id="chart_div"></div>
-
   <script>
-    // Глобальные флаги загрузки Google Charts
-    let ganttReady = false;
-    google.charts.load('current', { packages: ['gantt'] });
-    google.charts.setOnLoadCallback(() => { ganttReady = true; });
-
-    // Утилиты
-    function toNum(v) {
-      const n = parseFloat(v);
-      return Number.isFinite(n) ? n : 0;
-    }
     function attachListeners(row) {
       row.querySelectorAll('input').forEach(inp => {
         inp.addEventListener('input', saveTableData);
       });
     }
 
-    // Хранилище
     function saveTableData() {
       const rows = Array.from(document.querySelectorAll('#projectsTable tr')).slice(1);
       const data = rows.map(r => Array.from(r.querySelectorAll('input')).map(i => i.value || ''));
       localStorage.setItem('projectsData', JSON.stringify(data));
     }
+
     function loadTableData() {
       const saved = localStorage.getItem('projectsData');
       const table = document.getElementById('projectsTable');
       while (table.rows.length > 1) table.deleteRow(1);
-
       if (!saved) { addRow(); return; }
       let data = [];
-      try {
-        data = JSON.parse(saved);
-        if (!Array.isArray(data)) data = [];
-      } catch { data = []; }
-
+      try { data = JSON.parse(saved); if (!Array.isArray(data)) data = []; } catch { data = []; }
       if (data.length === 0) { addRow(); return; }
-
       data.forEach(rowData => {
         const row = table.insertRow();
         for (let i = 0; i < 7; i++) {
@@ -97,7 +79,6 @@
       });
     }
 
-    // Действия
     function addRow() {
       const row = document.getElementById('projectsTable').insertRow();
       for (let i = 0; i < 7; i++) {
@@ -111,153 +92,22 @@
       attachListeners(row);
       saveTableData();
     }
+
     function clearData() {
       localStorage.removeItem('projectsData');
       const table = document.getElementById('projectsTable');
       while (table.rows.length > 1) table.deleteRow(1);
       addRow();
-      document.getElementById('chart_div').innerHTML = '';
     }
-    function calculateAndDraw() {
+
+    document.getElementById('btnAdd').addEventListener('click', addRow);
+    document.getElementById('btnClear').addEventListener('click', clearData);
+    document.getElementById('btnGoChart').addEventListener('click', () => {
       saveTableData();
-
-      const rows = Array.from(document.querySelectorAll('#projectsTable tr')).slice(1);
-      if (rows.length === 0) {
-        document.getElementById('chart_div').innerHTML = '';
-        return;
-      }
-
-      const chartData = [];
-
-      rows.forEach((row, idx) => {
-        const inputs = row.querySelectorAll('input');
-        if (inputs.length < 7) return;
-
-        const [nameInp, startInp, endInp, sumInp, advDateInp, advPercInp, discPercInp] = inputs;
-
-        const name = (nameInp.value || `Проект ${idx + 1}`).trim();
-        const startDate = startInp.value ? new Date(startInp.value) : null;
-        const endDate = endInp.value ? new Date(endInp.value) : null;
-        const sum = toNum(sumInp.value);
-        const advDate = advDateInp.value ? new Date(advDateInp.value) : null;
-        const advPerc = toNum(advPercInp.value);
-        const discPerc = toNum(discPercInp.value);
-
-        if (!startDate || !endDate || isNaN(startDate.getTime()) || isNaN(endDate.getTime())) {
-          return;
-        }
-
-        // Платёж: конец проекта + 15 дней
-        const paymentDate = new Date(endDate);
-        paymentDate.setDate(paymentDate.getDate() + 15);
-
-        // Вычеты от исходной суммы (понижение не рисуем, только учитываем)
-        const discAmt = discPerc > 0 ? sum * (discPerc / 100) : 0;
-        const advAmt = advPerc > 0 ? sum * (advPerc / 100) : 0;
-        const finalSum = sum - discAmt - advAmt;
-
-        // Полоса проекта — только название и сумма контракта
-        chartData.push([
-          `proj${idx + 1}`,
-          `${name}\nКонтракт: ${sum.toFixed(2)} ₽`,
-          'Проект',
-          startDate,
-          endDate,
-          null,
-          100,
-          null
-        ]);
-
-        // Аванс — маркер (без зависимости, чтобы не было стрелок)
-        if (advDate && advAmt > 0) {
-          const advEnd = new Date(advDate);
-          advEnd.setDate(advEnd.getDate() + 1);
-          chartData.push([
-            `adv${idx + 1}`,
-            `Аванс: ${advAmt.toFixed(2)} ₽\n${advDate.toLocaleDateString('ru-RU')}`,
-            'Аванс',
-            advDate,
-            advEnd,
-            null,
-            100,
-            null
-          ]);
-        }
-
-        // Поступление — маркер (можно привязать к проекту для визуальной цепочки)
-        const payEnd = new Date(paymentDate);
-        payEnd.setDate(payEnd.getDate() + 1);
-        chartData.push([
-          `pay${idx + 1}`,
-          `Поступление: ${finalSum.toFixed(2)} ₽\n${paymentDate.toLocaleDateString('ru-RU')}`,
-          'Поступление',
-          paymentDate,
-          payEnd,
-          null,
-          0,
-          `proj${idx + 1}`
-        ]);
-      });
-
-      if (chartData.length === 0) {
-        document.getElementById('chart_div').innerHTML = '';
-        return;
-      }
-
-      if (!ganttReady) {
-        const wait = setInterval(() => {
-          if (ganttReady) {
-            clearInterval(wait);
-            drawChart(chartData);
-          }
-        }, 50);
-      } else {
-        drawChart(chartData);
-      }
-    }
-
-    // Рисование диаграммы
-    function drawChart(chartData) {
-      const data = new google.visualization.DataTable();
-      data.addColumn('string', 'Task ID');
-      data.addColumn('string', 'Task Name');
-      data.addColumn('string', 'Resource');
-      data.addColumn('date', 'Start Date');
-      data.addColumn('date', 'End Date');
-      data.addColumn('number', 'Duration');
-      data.addColumn('number', 'Percent Complete');
-      data.addColumn('string', 'Dependencies');
-
-      data.addRows(chartData);
-
-      const options = {
-        height: 640,
-        gantt: {
-          trackHeight: 50,
-          palette: [
-            { color: '#4a90e2', dark: '#2c5aa0', light: '#a1c4f4' }, // Проект
-            { color: '#009999', dark: '#b87416', light: '#fcd59b' }, // Поступление
-            { color: '#008000', dark: '#4a8c14', light: '#b8e986' }  // Аванс
-          ]
-        }
-      };
-
-      const chart = new google.visualization.Gantt(document.getElementById('chart_div'));
-      chart.draw(data, options);
-    }
-
-    // Привязка кнопок и загрузка данных после DOMContentLoaded
-    document.addEventListener('DOMContentLoaded', () => {
-      const table = document.getElementById('projectsTable');
-      if (table.rows.length > 1) attachListeners(table.rows[1]);
-
-      document.getElementById('btnAdd').addEventListener('click', addRow);
-      document.getElementById('btnCalc').addEventListener('click', calculateAndDraw);
-      document.getElementById('btnClear').addEventListener('click', clearData);
-
-      loadTableData();
+      window.location.href = 'chart.html';
     });
+
+    loadTableData();
   </script>
 </body>
 </html>
-```
