--- a/chart.html
+++ b/chart.html
@@ -1,1 +1,169 @@
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <title>График проектов</title>
+  <script src="https://www.gstatic.com/charts/loader.js"></script>
+  <style>
+    body { font-family: Arial, sans-serif; margin: 16px; }
+    #chart_div { width: 100%; height: 720px; }
+    .actions { margin-bottom: 12px; }
+    .actions button { margin-right: 6px; padding: 6px 10px; cursor: pointer; }
+    .warn { color: #b00020; font-size: 13px; margin: 8px 0; }
+  </style>
+</head>
+<body>
+  <h2>График проектов</h2>
+  <div class="actions">
+    <button onclick="window.location.href='index.html'">Назад к вводу</button>
+    <button id="btnRefresh">Обновить</button>
+  </div>
+  <div id="msg" class="warn"></div>
+  <div id="chart_div"></div>
+
+  <script>
+    google.charts.load('current', { packages: ['gantt'] });
+    google.charts.setOnLoadCallback(drawFromStorage);
+
+    function toNum(v) {
+      const n = parseFloat(v);
+      return Number.isFinite(n) ? n : 0;
+    }
+
+    function drawFromStorage() {
+      const msg = document.getElementById('msg');
+      msg.textContent = '';
+
+      const saved = localStorage.getItem('projectsData');
+      if (!saved) {
+        msg.textContent = 'Нет сохранённых данных. Перейдите на страницу ввода.';
+        return;
+      }
+
+      let rows = [];
+      try {
+        rows = JSON.parse(saved);
+        if (!Array.isArray(rows)) rows = [];
+      } catch {
+        rows = [];
+      }
+
+      if (rows.length === 0) {
+        msg.textContent = 'Данные пусты. Перейдите на страницу ввода.';
+        return;
+      }
+
+      const chartData = [];
+      rows.forEach((r, idx) => {
+        const [name, start, end, sumStr, advDateStr, advPercStr, discPercStr] = r;
+
+        const projName = (name || `Проект ${idx + 1}`).trim();
+        const startDate = start ? new Date(start) : null;
+        const endDate = end ? new Date(end) : null;
+        const sum = toNum(sumStr);
+        const advDate = advDateStr ? new Date(advDateStr) : null;
+        const advPerc = toNum(advPercStr);
+        const discPerc = toNum(discPercStr);
+
+        if (!startDate || !endDate || isNaN(startDate) || isNaN(endDate)) return;
+
+        const paymentDate = new Date(endDate);
+        paymentDate.setDate(paymentDate.getDate() + 15);
+
+        const discAmt = discPerc > 0 ? sum * (discPerc / 100) : 0;
+        const advAmt = advPerc > 0 ? sum * (advPerc / 100) : 0;
+        const finalSum = sum - discAmt - advAmt;
+
+        const projId = `proj${idx + 1}`;
+
+        // Проект
+        chartData.push([
+          projId,
+          `${projName}\nКонтракт: ${sum.toFixed(2)} ₽`,
+          'Проект',
+          startDate,
+          endDate,
+          null,
+          100,
+          null
+        ]);
+
+        // Аванс
+        if (advDate && advAmt > 0) {
+          const advEnd = new Date(advDate);
+          advEnd.setDate(advEnd.getDate() + 1);
+          chartData.push([
+            `adv${idx + 1}`,
+            `Аванс: ${advAmt.toFixed(2)} ₽\n${advDate.toLocaleDateString('ru-RU')}`,
+            'Аванс',
+            advDate,
+            advEnd,
+            null,
+            100,
+            projId
+          ]);
+        }
+
+        // Поступление
+        const payEnd = new Date(paymentDate);
+        payEnd.setDate(payEnd.getDate() + 1);
+        chartData.push([
+          `pay${idx + 1}`,
+          `Поступление: ${finalSum.toFixed(2)} ₽\n${paymentDate.toLocaleDateString('ru-RU')}`,
+          'Поступление',
+          paymentDate,
+          payEnd,
+          null,
+          0,
+          projId
+        ]);
+      });
+
+      if (chartData.length === 0) {
+        msg.textContent = 'Не нашлось валидных строк для построения.';
+        return;
+      }
+
+      drawChart(chartData);
+    }
+
+    function drawChart(chartData) {
+      const data = new google.visualization.DataTable();
+      data.addColumn('string', 'Task ID');
+      data.addColumn('string', 'Task Name');
+      data.addColumn('string', 'Resource');
+      data.addColumn('date', 'Start Date');
+      data.addColumn('date', 'End Date');
+      data.addColumn('number', 'Duration');
+      data.addColumn('number', 'Percent Complete');
+      data.addColumn('string', 'Dependencies');
+
+      data.addRows(chartData);
+
+      const options = {
+        height: 720,
+        gantt: {
+          trackHeight: 50,
+          arrow: {
+            angle: 0,
+            width: 0,
+            color: 'transparent',
+            radius: 0    // квадратные углы
+          },
+          palette: [
+            { color: '#4a90e2', dark: '#2c5aa0', light: '#a1c4f4' }, // Проект
+            { color: '#008000', dark: '#4a8c14', light: '#b8e986' }, // Аванс
+            { color: '#009999', dark: '#006d6d', light: '#66cccc' }  // Поступление
+          ]
+        }
+      };
+
+      const chart = new google.visualization.Gantt(document.getElementById('chart_div'));
+      chart.draw(data, options);
+    }
+
+    document.getElementById('btnRefresh').addEventListener('click', drawFromStorage);
+  </script>
+</body>
+</html>
 
