--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <table id="projectsTable">
     <tr>
-      <th>Название проекта</th>
+      <th>Название объекта</th>
       <th>Дата начала проекта</th>
       <th>Дата конца проекта</th>
       <th>Сумма контракта</th>
